connect to the firebase and navigate Login, Register and Home

--- a/src/style.scss
+++ b/src/style.scss
@@ -87,6 +87,7 @@
             flex: 1;
             border-right: 1px solid #3e3c61;
             background-color: #3e3c61;
+            position: relative;
 
             .search{
                 border-bottom: 1px solid gray;
